# Skin-Smoother-Filter

./: AHMLIP.sln  CMakeLists.txt  LICENSE  README.MD
AHMLIP/: AHMLIP.vcxproj  AHMLIP.vcxproj.filters
doc/results/: diagrama.odp
source/: CMakeLists.txt  ahmbmp.cpp  ahmbmp.h  ahmfilters.h  ahmlux.cpp  ahmlux.h  ahmskin.cpp  ahmskin.h  ahmutils.cpp  ahmutils.h  ahmycbcr.cpp  ahmycbcr.h  bfilter.cpp  erosion.cpp  fltk_resources.h  main.cpp  resources.rc
